--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
 	"main": "dist/index.js",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/magarampage/sm-react-common-comments.git"
+		"url": "git+https://github.com/sorokinmedia/sm-react-common-comments.git"
 	},
 	"keywords": [
 		"react",
 		"components"
 	],
-	"author": "magarampage",
+	"author": "sorokinmedia",
 	"license": "BSD-3-Clause",
 	"bugs": {
-		"url": "https://github.com/magarampage/sm-react-common-comments/issues"
+		"url": "https://github.com/sorokinmedia/sm-react-common-comments/issues"
 	},
-	"homepage": "https://github.com/magarampage/sm-react-common-comments#readme",
+	"homepage": "https://github.com/sorokinmedia/sm-react-common-comments#readme",
 	"peerDependencies": {
 		"prop-types": "^15.6.2",
 		"react": "^16.0.0",
